--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@elysiajs/cors": "^1.1.1",
     "@elysiajs/jwt": "^1.1.1",
     "@elysiajs/swagger": "^1.1.5",
-    "elysia": "latest"
+    "elysia": "latest",
+    "pino": "^9.5.0",
+    "pino-pretty": "^11.3.0"
   },
   "devDependencies": {
     "bun-types": "latest"
