--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.50",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts"
+    "dev": "bun run --watch src/index.ts",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@elysiajs/bearer": "^1.1.2",
@@ -15,7 +16,14 @@
     "pino-pretty": "^11.3.0"
   },
   "devDependencies": {
-    "bun-types": "latest"
+    "bun-types": "latest",
+    "prettier": "3.3.3"
   },
-  "module": "src/index.js"
+  "module": "src/index.js",
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 4,
+    "semi": false,
+    "singleQuote": true
+  }
 }
